[package]
name = "Tetris"
version = "0.1.0"
authors = ["david"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.3.0"
chrono = "0.4.13"

[dependencies.sdl2]
version = "0.34.1"
default-features = false
features = ["ttf"]